# noter

./: CHANGELOG.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  code-quality.yml  release.yml
docs/: API.md  DEVELOPMENT.md
src/: config.rs  data.rs  lib.rs  main.rs
src/commands/: assignments.rs  config.rs  courses.rs  info.rs  mod.rs  notes.rs  search.rs  setup.rs  templates.rs  typst.rs
src/config/: integrations.rs  metadata.rs  mod.rs  paths.rs  persistence.rs  preferences.rs  search.rs  semester.rs  templates.rs  typst.rs  validation.rs
src/core/: courses.rs  directories.rs  files.rs  github_template_fetcher.rs  mod.rs  search_engine.rs  setup.rs  status.rs  typst.rs
src/core/template/: builder.rs  context.rs  engine.rs  fetcher.rs  mod.rs
src/dev/: generator.rs  mod.rs  sample.rs  tools.rs
src/display/: formatters.rs  mod.rs  output.rs  prompts.rs
