[package]
name = "noter"
version = "0.6.2"
edition = "2024"
description = "DTU note-taking CLI with Typst and Obsidian integration"
authors = ["Mikkel M.H Pedersen"]
license = "MIT"
repository = "https://github.com/HollowNumber/noter"
homepage = "https://github.com/HollowNumber/noter"
readme = "README.md"
keywords = ["cli", "notes", "typst", "dtu", "education"]
categories = ["command-line-utilities", "text-processing"]
rust-version = "1.85.0"
exclude = [
    ".github/*",
    "target/*",
    "*.log",
    "test-*",
]

[[bin]]
name = "noter"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.54", features = ["derive"]}
chrono = {version = "0.4.42", features = ["serde"]}
serde_json = "1.0.149"
anyhow = "1.0.98"
dirs = "6.0.0"
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
opener = "0.8.3"
ureq = { version = "3.0.12", features = ["json"] }
flate2 = "1.0.0"
tar = "0.4.0"
zip = "4.3.0"
toml = "0.9.5"
semver = "1.0.26"
regex = "1.11.1"
humansize = "2.1.3"

# Only include these in debug builds
[dependencies.rand]
version = "0.9.2"
features = ["std_rng"]
optional = true

[dependencies.fake]
version = "4.4.0"
features = ["derive", "chrono"]
optional = true


[features]
default = []
# Enable fake data generation for development
dev-tools = ["rand", "fake"]



[dev-dependencies]
tempfile = "3.20.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
